tests/rosetta/transpiler/OCaml/angles-geometric-normalization-and-conversion.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/angles-geometric-normalization-and-conversion.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Angles-geometric-normalization-and-conversion" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/angles-geometric-normalization-and-conversion.ml", line 29, characters 18-23:
29 |   __ret := (d mod 360.0); raise Return
                       ^^^^^
Error: This expression has type float but an expression was expected of type
         int
